# base-project

./: CMakeLists.txt  README  main.cpp
libraries/include/: CMakelists.txt
libraries/include/glad/include/glad/: glad.h
libraries/include/glad/src/: glad.c
shaders/: vertex_shader_example.glsl
src/: main.cpp  shader.cpp  square.cpp
src/include/: shader.h  square.h
